# SCPD

./: CMakeLists.txt  get_csv.py  render.py  run_polus.py  var36.c  var36_mpi.c  var36_omp_for.c  var36_omp_task.c
